yaml/deployment-petclinic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
       - name: petclinic
         image: sewook0204/spring-petclinic:1.0.3
         ports:
           - containerPort: 8080
         resources:
           requests:
             cpu: "1m"
             memory: "100Mi"
           limits:
             cpu: "1m"
             memory: "500Mi"
